--- a/templates/assets/dashboard_with_nav_bars.html
+++ b/templates/assets/dashboard_with_nav_bars.html
@@ -5,40 +5,49 @@
 {% block content %}
     <div class="row" style="background-color: #808080">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid d-flex justify-content-between">
-                <a class="navbar-brand" href="/"><img src="{% static 'img/logo-variant-2.png' %}" alt=""
-                                                      style="width: 80%"></a>
-
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="{% static 'img/logo-variant-2.png' %}" width="150px" alt="">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-grow: unset">
-                    <ul class="navbar-nav d-flex align-items-center">
+                <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{% url 'docs/home' %}">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="{% url 'produto-list' %}">Inicio</a>
                         </li>
-                        <li>&bull;</li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'docs/product' %}">Produto</a>
+                            <a class="nav-link" href="#">Link</a>
                         </li>
-                        <li>&bull;</li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="{% url 'docs/process' %}" role="button"
-                               data-bs-toggle="dropdown"
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                aria-expanded="false">
-                                Processo
+                                Dropdown
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{% url 'docs/lifecycle' %}">Ciclo de Vida</a></li>
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
                         </li>
-                        <li>&bull;</li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'docs/office' %}">Papeis</a>
+                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                         </li>
                     </ul>
+                    <div class="d-flex">
+                        {% if user.is_authenticated %}
+                            <a href="{% url 'logout' %}"><i class="fs-4 text-dark-emphasis bi bi-box-arrow-right"></i></a>
+                        {% else %}
+                            <a class="text-dark-emphasis text-decoration-none px-2" href="{% url 'login' %}">Entrar</a>
+                            <a class="text-dark-emphasis text-decoration-none px-2" href="{% url 'create-account' %}">Criar conta</i></a>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         </nav>
