--- a/templates/assets/dashboard_with_nav_bars.html
+++ b/templates/assets/dashboard_with_nav_bars.html
@@ -31,6 +31,8 @@
                         {% if user.is_authenticated %}
                             <a href="{% url 'logout' %}"><i class="fs-4 text-dark-emphasis bi bi-box-arrow-right" style="color: #6E0AD6;"></i></a>
                         {% else %}
+                            <a class="text-dark-emphasis text-decoration-none px-2"><img src="{% static 'img/papo.png' %}" width="24px" alt=""></a>
+                            <a class="text-dark-emphasis text-decoration-none px-2"><img src="{% static 'img/car.png' %}" width="24px" alt=""></a>
                             <a class="text-dark-emphasis text-decoration-none px-2"><img src="{% static 'img/coraçao.png' %}" width="24px" alt=""></a>
                             <a class="text-dark-emphasis text-decoration-none px-2" href="{% url 'login' %}"><img src="{% static 'img/User Circle.png' %}" width="24px" alt=""></a>
     
