Updated dependencies and removed unused files

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -20,7 +20,9 @@
 </div>
 {% block scripts %}
 {% endblock %}
-<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 
+<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
