--- a/web/templates/products/produto_list.html
+++ b/web/templates/products/produto_list.html
@@ -10,16 +10,16 @@
     }
     </style>
 
-<div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center">
     <div class="btn-group">
-        <div class="dropdown position-static ">
-            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+        <div class="dropdown">
+            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1"  data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <img src="{%  static 'img/shop.png' %}" alt=""><span style="color:rgba(110, 10, 214, 1);">Anúncios</span> 
             </button>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Ação 1</a></li>
-                <li><a class="dropdown-item" href="#">Outra ação 1</a></li>
-                <li><a class="dropdown-item" href="#">Algo mais aqui 1</a></li>
+                <a class="dropdown-item" href="#">Ação 1</a>
+                <a class="dropdown-item" href="#">Outra ação 1</a>
+                <a class="dropdown-item" href="#">Algo mais aqui 1</a>
             </ul>
         </div>
      
