--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    
+
 
     <title>{% block title %}{% endblock %}</title>
+    {% block css %}
+    {% endblock %}
 </head>
 <body>
 <div class="container-fluid ">
