--- a/templates/assets/dashboard_with_nav_bars.html
+++ b/templates/assets/dashboard_with_nav_bars.html
@@ -8,6 +8,9 @@
             color: #6E0AD6;
             opacity: 1;
         }
+        .dropdown-menu {
+             z-index: 9999 !important;
+}
     </style>
 {% endblock %}
 
@@ -31,6 +34,27 @@
                                 </button>
                             </div>
                         </div>
+                        <div class="d-flex justify-content-center align-items-center">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-controls="navbarSupportedContent" aria-expand="false">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav ">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                                     <i class="bi bi-grid"></i>
+                                        Categorias
+                                    </a>
+                                   <div class="dropdown-menu">
+                                    {% for category in categories %}
+                                        <a class="dropdown-item" href="{% url 'categoria' category.id %}">{{ category.nome }}</a>
+                                         {% endfor %}
+                                </div>
+                                </li>
+                            </ul>
+                        </div>
+                     </div>
                     </form>
                 </div>
                         <div class="d-flex">
