--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -23,8 +23,12 @@
 {% block scripts %}
 {% endblock %}
 
+{% block js %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+{% endblock js %}
+
 <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
