--- a/web/templates/products/produto_list.html
+++ b/web/templates/products/produto_list.html
@@ -13,7 +13,7 @@
                             <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
                    
                          <h2 class="fw-normal " style="font-size: 20px; font-style: normal; font-weight: 500;">
-                             <a href="{% url 'categoria' category.id %}" class="text-decoration-none">{{ category.nome }}</a></h2>
+                             <a href="{% url 'categoria' category.id %}" class="text-decoration-none" style="color: #6E0AD6;">{{ category.nome }}</a></h2>
                         </div>
                     </a>
                 {% endfor %}
