--- a/templates/assets/dashboard_with_nav_bars.html
+++ b/templates/assets/dashboard_with_nav_bars.html
@@ -18,11 +18,12 @@
     <div class="row" style="background-color: #808080">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'produto-list' %}">
-                    <img src="{% static 'img/iconeJLMY.png' %}" width="86px" alt="" href="{% url 'produto-list' %}">
+                <a class="navbar-brand" href="{% url 'produto-list' %}"  style=" height:70px;">
+                    <img src="{% static 'img/iconeJLMY.png' %}" width="86px"  alt="" href="{% url 'produto-list' %}" >
                 </a>
                 <div class="container search-container mx-auto" style=" max-width:30rem;">
                     <form class="form-inline my-2 my-lg-0 search-form" method="get" action="{% url 'produto-list' %}">
+                        <div class="d-flex flex-column align-items-center">
                         <div class="input-group w-80 ">
                             <input name="search" type="search" class="form-control search-input border-1 "
                                    placeholder="Pesquise na JLMY"
@@ -35,20 +36,20 @@
                             </div>
                         </div>
                         <div class="d-flex justify-content-center align-items-center">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-controls="navbarSupportedContent" aria-expand="false">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-controls="navbarSupportedContent" aria-expand="false" >
                             <span class="navbar-toggler-icon"></span>
                         </button>
 
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ">
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" style="color:#6E0AD6;">
                                      <i class="bi bi-grid"></i>
                                         Categorias
                                     </a>
-                                   <div class="dropdown-menu">
+                                   <div class="dropdown-menu" style="color:#6E0AD6;">
                                     {% for category in categories %}
-                                        <a class="dropdown-item" href="{% url 'categoria' category.id %}">{{ category.nome }}</a>
+                                        <a class="dropdown-item" href="{% url 'categoria' category.id %}" style="color:#6E0AD6;">{{ category.nome }}</a>
                                          {% endfor %}
                                 </div>
                                 </li>
@@ -56,15 +57,16 @@
                         </div>
                      </div>
                     </form>
+                    </div>
                 </div>
-                        <div class="d-flex">
+                        <div class="d-flex " style="height: 70px;">
                         {% if user.is_authenticated %}
                             <a href="{% url 'logout' %}"><i class="fs-4 text-dark-emphasis bi bi-box-arrow-right" style="color: #6E0AD6;"></i></a>
                         {% else %}
-                            <a class="text-dark-emphasis text-decoration-none px-2"><img src="{% static 'img/papo.png' %}" width="24px" alt=""></a>
-                            <a class="text-dark-emphasis text-decoration-none px-2"><img src="{% static 'img/car.png' %}" width="24px" alt=""></a>
-                            <a class="text-dark-emphasis text-decoration-none px-2"><img src="{% static 'img/coraçao.png' %}" width="24px" alt=""></a>
-                            <a class="text-dark-emphasis text-decoration-none px-2" href="{% url 'login' %}"><img src="{% static 'img/User Circle.png' %}" width="24px" alt=""></a>
+                            <a class="text-dark-emphasis text-decoration-none px-2"><i class="bi bi-wechat fs-5" style="color:#6E0AD6;" ></i></a>
+                            <a class="text-dark-emphasis text-decoration-none px-2"><i class="bi bi-cart3 fs-5" style="color:#6E0AD6;"></i></a>
+                            <a class="text-dark-emphasis text-decoration-none px-2"><i class="bi bi-heart fs-5" style="color:#6E0AD6;"></i></a>
+                            <a class="text-dark-emphasis text-decoration-none px-2"  href="{% url 'login' %}"><i class="bi bi-person-circle fs-5" style="color:#6E0AD6;"></i></a>
     
                         {% endif %}
                     </div>
