Fix search input border style

--- a/templates/assets/dashboard_with_nav_bars.html
+++ b/templates/assets/dashboard_with_nav_bars.html
@@ -25,9 +25,9 @@
                     <form class="form-inline my-2 my-lg-0 search-form" method="get" action="{% url 'produto-list' %}">
                         <div class="d-flex flex-column align-items-center">
                         <div class="input-group w-80 ">
-                            <input name="search" type="search" class="form-control search-input border-1 "
+                            <input name="search" type="search" class="form-control search-input rounded"
                                    placeholder="Pesquise na JLMY"
-                                   style=" background-color: #e7e7e7; border: solid #6E0AD6;">
+                                   style=" background-color: #e7e7e7; border: 1px solid #6E0AD6;">
                             <div class="input-group-append h-2">
                                 <button class="btn  search-button position-absolute  top-0 end-0 " type="submit"
                                         style="">
