--- a/web/templates/products/produto_list.html
+++ b/web/templates/products/produto_list.html
@@ -1,48 +1,50 @@
 {% extends "assets/dashboard_with_nav_bars.html" %}
 {% load static %}
 {% block content-inside %}
-       <div style="display: contents;" >
-        <section class="ui-search-header--deal" style="background-position: 50%; background-repeat: no-repeat; background-size: auto 100%; display: block; margin: 0; min-height: 242px; width: 100%;">
-            <img src="{% static 'img/21869768_pin_12.jpg' %}" alt="Descrição da imagem" style="width: 100%; height: 400px;">
-       </section>
-    </div>
+
+
+</style>
+<div class="card" >
+    <img src="{% static 'img/21869768_pin_12.jpg' %}"  class="card-img" alt="" style="">
+</div>
+       
     <div class="row border border-dark-subtle border-start-0 border-end-0">
         <div class="d-flex flex-column px-5 py-4">
             <span class="fs-3 w-5  h-5" style="color: #6E0AD6;">Categorias</span>
-            <div class="row  hstack gap-3">
+            <div class="row flex-wrap hstack gap-3" >
                 {% for category in categories %}
-                      <div class="col-2 p-5"> 
-                        <a href="{% url 'categoria' category.id %}" class="text-decoration-none">
-                            <img src="{{ category.imagem.url }}" class="bd-placeholder-img rounded-circle" alt="" style="width: 100px; height: 100px;">
-                            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                            <p class="fw-normal ml-2"  style="font-size: 16px; font-style: normal;">
-                                {{ category.nome }}
-                            </p>
-                        </a>
-                    </div>
+                  <div class="col-2 p-3">
+                    <a href="{% url 'categoria' category.id %}" class="text-decoration-none" >
+                      <img src="{{ category.imagem.url }}" class="bd-placeholder-img rounded-circle" alt="" style="width: 100px; height: 100px;">
+                      <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                      <p class="fw-normal ml-2"  style="font-size: 16px; font-style: normal;">
+                        {{ category.nome }}
+                      </p>
+                    </a>
+                  </div>
                 {% endfor %}
-            </div>
+              </div>
             </div>
             
         </div>
-    </div>
+  
 
     <div class="container p-0 m-0">
         <div class="row ">
             <div class="px-5 py-4">
-                <span class="fs-5" style="color: #6E0AD6;">Anúncios</span>
-                <div class="row row-cols-1 row-cols-md-4">
+                <span class="fs-3 w-5 h-5" style="color: #6E0AD6;">Ofertas</span>
+                <div class="row row-cols-3 row-cols-md-4" >
                 {{ products.produto }}
                     {% for venda in products %}
-                        <div class="col mb-4">
-                            <div class="card">
+                        <div class="col mb-2 p-2" >
+                            <div class="card" style="margin: 15px 15px 0 0;" >
                                 <img src="{{ venda.produto.imagem.url }}" class="card-img-top" alt=""
-                                     style="height: 300px; object-fit: cover;">
+                                     style="height: 250px; object-fit: cover;">
                                 <div class="card-body">
                                     <h5 class="card-title">{{ venda.produto.nome }}</h5>
                                     <span class="card-text">R${{ venda.preco }}</span>
                                     <p class="card-text text-dark-emphasis" style="font-size: 13px">Vendido por: {{ venda.vendedor }}</p>
-                                    <a href="#" class="btn btn-warning">Comprar agora</a>
+                                    <a href="#" class="btn" style="border-radius: 15px; background: #E47911; color: #ffff;">Adicione ao seu carrinho</a>
                                 </div>
                             </div>
                         </div>
