--- a/web/templates/products/produto_list.html
+++ b/web/templates/products/produto_list.html
@@ -5,7 +5,7 @@
 
 </style>
 <div class="card" >
-    <img src="{% static 'img/21869768_pin_12.jpg' %}"  class="card-img" alt="" style="">
+    <img src="{% static 'img/persons/image 1.svg' %}"  class="card-img" alt="" style="width: 100%; height: 100%">
 </div>
        
     <div class="row border border-dark-subtle border-start-0 border-end-0">
