--- a/web/templates/products/produto_list.html
+++ b/web/templates/products/produto_list.html
@@ -47,7 +47,7 @@
 <div class="card">
     <img src="{% static 'img/persons/image 1.svg' %}" class="card-img" alt="" style="width: 100%; height: 100%">
 </div> 
-
+<div class="container p-0 m-0">
     <div class="row border border-start-0 border-end-0">
         <div class="d-flex flex-column">
             <span class="fs-3 w-5 h-5" style="color: #6E0AD6;">Categorias</span>
@@ -67,7 +67,7 @@
             </div>
         </div>
     </div>
-
+</div>
 <div class="container p-0 m-0">
     <div class="row">
         <div class="px-5 py-4">
