--- a/web/templates/products/create.html
+++ b/web/templates/products/create.html
@@ -1,8 +1,9 @@
 {% extends 'assets/dashboard_with_nav_bars.html' %}
 
 {% block content-inside %}
-    <form action="." method="post">
+    <form action="." method="post" enctype="multipart/form-data">
+        {% csrf_token %}
         {{ form.as_p }}
-        <button class="btn btn-primary" type="submit">Criar Produto</button>
+        <button class="btn btn-primary my-3" type="submit">Criar Produto</button>
     </form>
 {% endblock %}
