--- a/templates/assets/dashboard_with_nav_bars.html
+++ b/templates/assets/dashboard_with_nav_bars.html
@@ -3,97 +3,82 @@
 {% load static %}
 
 {% block css %}
-<style>
-    .search-input::placeholder {
-        color: #6E0AD6;
-        opacity: 1;
-    }
+    <style>
+        .search-input::placeholder {
+            color: #6E0AD6;
+            opacity: 1;
+        }
 
-    .dropdown-menu {
-        z-index: 9999 !important;
-    }
-</style>
+        .dropdown-menu {
+            z-index: 9999 !important;
+        }
+    </style>
 {% endblock %}
 
 {% block content %}
-<div class="row" style="background-color: #808080">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'produto-list' %}" style=" height:70px;">
-                <img src="{% static 'img/iconeJLMY.png' %}" width="86px" alt="" href="{% url 'produto-list' %}">
-            </a>
-            <div class="container search-container mx-auto" style=" max-width:30rem;">
-                <form class="form-inline my-2 my-lg-0 search-form" method="get" action="{% url 'produto-list' %}">
-                    <div class="d-flex flex-column align-items-center">
-                        <div class="input-group w-80 ">
-                            <input name="search" type="search" class="form-control search-input rou"
-                                placeholder="Pesquise na JLMY"
-                                style=" background-color: #e7e7e7; border: 1px solid #6E0AD6;">
-                            <div class="input-group-append h-2">
-                                <button class="btn  search-button position-absolute  top-0 end-0 " type="submit"
-                                    style="">
-                                    <i class="fas fa-search border-1" style="color: #6E0AD6; "></i>
+    <div class="row" style="background-color: #808080">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid ali">
+                <a class="navbar-brand d-flex align-items-center" href="{% url 'produto-list' %}" style=" height:50px;">
+                    <img src="{% static 'img/iconeJLMY.png' %}" width="86px" alt="" href="{% url 'produto-list' %}">
+                </a>
+                <div class="container search-container mx-auto" style=" max-width:30rem;">
+                    <form class="form-inline my-2 my-lg-0 search-form" method="get" action="{% url 'produto-list' %}">
+                        <div class="d-flex flex-column align-items-center">
+                            <div class="input-group w-80 ">
+                                <input name="search" type="search" class="form-control search-input rou"
+                                       placeholder="Pesquise na JLMY"
+                                       style=" background-color: #e7e7e7; border: 1px solid #6E0AD6;">
+                                <div class="input-group-append h-2">
+                                    <button class="btn  search-button position-absolute  top-0 end-0 " type="submit"
+                                            style="">
+                                        <i class="fas fa-search border-1" style="color: #6E0AD6; "></i>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-center align-items-center">
+                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                        aria-controls="navbarSupportedContent" aria-expand="false">
+                                    <span class="navbar-toggler-icon"></span>
                                 </button>
                             </div>
                         </div>
-                        <div class="d-flex justify-content-center align-items-center">
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                aria-controls="navbarSupportedContent" aria-expand="false">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
+                    </form>
+                </div>
+            </div>
+            <div class="d-flex align-items-center" style="height: 50px;">
+                {% if user.is_authenticated %}
+                    <a class="text-dark-emphasis text-decoration-none px-2" href="{% url 'carrinho_detalhes' request.user.carrinho.id %}"><i class="bi bi-cart3 fs-5"
+                                                                               style="color:#6E0AD6;"></i></a>
+                    <a class="text-dark-emphasis text-decoration-none px-2"><i class="bi bi-heart fs-5"
+                                                                               style="color:#6E0AD6;"></i></a>
+                    <a class="text-dark-emphasis text-decoration-none px-2" href="{% url 'vendedor_detail' request.user.username %}"><i
+                            class="bi bi-person-circle fs-5" style="color:#6E0AD6;"></i></a>
+                    <a class="text-dark-emphasis text-decoration-none px-2" href="{% url 'logout' %}"><i
+                            class="bi bi-box-arrow-right fs-5"
+                            style="color: #6E0AD6;"></i></a>
+                {% else %}
+                    <a class="text-dark-emphasis text-decoration-none px-2"><i class="bi bi-cart3 fs-5"
+                                                                               style="color:#6E0AD6;"></i></a>
+                    <a class="text-dark-emphasis text-decoration-none px-2"><i class="bi bi-heart fs-5"
+                                                                               style="color:#6E0AD6;"></i></a>
+                    <a class="text-dark-emphasis text-decoration-none px-2" href="{% url 'login' %}"><i
+                            class="bi bi-person-circle fs-5" style="color:#6E0AD6;"></i></a>
 
-                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                <ul class="navbar-nav ">
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                            data-bs-toggle="dropdown" style="color:#6E0AD6;">
-                                            <i class="bi bi-grid"></i>
-                                            Categorias
-                                        </a>
-                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                            {% for category in categories %}
-                                            <h6 class="dropdown-header">{{ category.nome }}</h6>
-                                            {% for product in category.produtos.all %}
-                                            <a class="dropdown-item" href="">{{ product.nome }}</a>
-                                            {% endfor %}
-                                            {% endfor %}
-                                        </div>
-                            </div>
-                            </li>
-                            </ul>
-                        </div>
-                    </div>
-                </form>
+                {% endif %}
+            </div>
+
+        </nav>
+    </div>
+
+
+    <div class="row d-flex flex-row" style="height: 90vh;">
+        <div class="col-12 container" style="">
+            {% block content-inside %}
+            {% endblock content-inside %}
+            <div class="row d-flex align-items-center p-2" style="background-color: coral">
+                <span>&copy;Copyright 2023 &bull; JLMY - Commerce &bull; Todos os direitos reservados</span>
             </div>
         </div>
-        <div class="d-flex " style="height: 70px;">
-            {% if user.is_authenticated %}
-            <a href="{% url 'logout' %}"><i class="fs-4 text-dark-emphasis bi bi-box-arrow-right"
-                    style="color: #6E0AD6;"></i></a>
-            {% else %}
-            <a class="text-dark-emphasis text-decoration-none px-2"><i class="bi bi-wechat fs-5"
-                    style="color:#6E0AD6;"></i></a>
-            <a class="text-dark-emphasis text-decoration-none px-2"><i class="bi bi-cart3 fs-5"
-                    style="color:#6E0AD6;"></i></a>
-            <a class="text-dark-emphasis text-decoration-none px-2"><i class="bi bi-heart fs-5"
-                    style="color:#6E0AD6;"></i></a>
-            <a class="text-dark-emphasis text-decoration-none px-2" href="{% url 'login' %}"><i
-                    class="bi bi-person-circle fs-5" style="color:#6E0AD6;"></i></a>
-
-            {% endif %}
-        </div>
-
-    </nav>
-</div>
-
-
-<div class="row d-flex flex-row" style="height: 90vh;">
-    <div class="col-12 container" style="">
-        {% block content-inside %}
-        {% endblock content-inside %}
-        <div class="row d-flex align-items-center p-2" style="background-color: coral">
-            <span>&copy;Copyright 2023 &bull; JLMY - Commerce &bull; Todos os direitos reservados</span>
-        </div>
     </div>
-</div>
 {% endblock content %}
