--- a/web/templates/sales/create.html
+++ b/web/templates/sales/create.html
@@ -2,8 +2,9 @@
 
 {% block content-inside %}
     <form action="." method="post">
+        {% csrf_token %}
         {{ form.as_p }}
-        <p>Não achou o produto que você precisa? <a href="">Adicionar Produto</a></p>
+        <p>Não achou o produto que você precisa? <a href="{% url 'produto-create' %}">Adicionar Produto</a></p>
         <button class="btn btn-primary" type="submit">Criar venda</button>
     </form>
 {% endblock %}
